# gaitmap-datasets

./: .buildinfo  .gitignore  .gitmodules  .prospector.yml  CHANGELOG.html  CHANGELOG.md  LICENSE  README.html  README.md  README.rst  _tasks.py  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: test-and-lint.yml
_downloads/08076a719d53c1b8f657ae32a3742efb/: egait_segmentation_validation_2014.ipynb
_downloads/1df0fd8580706df66b149563a830c791/: pyshoe_2019.ipynb
_downloads/2ee1699173411d5ce148654d3d8c71b9/: kluge_2017.ipynb
_downloads/649add75e6a28c57b298701a2735ff5d/: pyshoe_2019.py
_downloads/877a477f2a3ea79725676d18dc66e9b6/: egait_parameter_validation_2013.ipynb
_downloads/8d2c9a018f6e8986f6662da47b454990/: sensor_position_dataset_2019.ipynb
_downloads/99dfda4674b913337d64c09ff60879de/: stair_ambulation_healthy_2021.ipynb
_downloads/ba9e20ae543e037487469936bd439965/: sensor_position_comparison_2019.py
_downloads/c9040da2973fa42c7df551c7318afa20/: sensor_position_dataset_2019.py
_downloads/ca42ec32ec92c53e9cb60ed0e1c391b0/: egait_adidas_2014.ipynb
_downloads/cea5cb9ef9713161d0778180949880d6/: kluge_2017.py
_downloads/e85f0a10cd6db63c09556dda79309b8d/: sensor_position_comparison_2019.ipynb
_downloads/f5a493a127c5e720241fa83b2630c2ad/: egait_parameter_validation_2013.py
_downloads/f83a15ad56bc60bea5fb92297a50da8f/: egait_segmentation_validation_2014.py
_sources/: CHANGELOG.md.txt  README.md.txt  README.rst.txt  index.rst.txt
_sources/auto_examples/: egait_adidas_2014.rst.txt  egait_parameter_validation_2013.rst.txt  egait_segmentation_validation_2014.rst.txt  index.rst.txt  kluge_2017.rst.txt  pyshoe_2019.rst.txt  sensor_position_comparison_2019.rst.txt  sensor_position_dataset_2019.rst.txt  sg_execution_times.rst.txt  stair_ambulation_healthy_2021.rst.txt
auto_examples/: egait_adidas_2014.html  egait_parameter_validation_2013.html  egait_segmentation_validation_2014.html  index.html  kluge_2017.html  pyshoe_2019.html  sensor_position_comparison_2019.html  sensor_position_dataset_2019.html  sg_execution_times.html  stair_ambulation_healthy_2021.html
docs/: .gitignore  conf.py  index.rst
docs/logos/: README.html  create_all_logos.sh
docs/modules/: index.rst
examples/: README.rst  egait_adidas_2014.py  egait_parameter_validation_2013.py  egait_segmentation_validation_2014.py  egait_validation_2013.py  kluge_2017.py  pyshoe_2019.py  sensor_position_comparison_2019.py  sensor_position_dataset_2019.py  stair_ambulation_healthy_2021.py
gaitmap_datasets/: __init__.py  _config.py
gaitmap_datasets/egait_adidas_2014/: __init__.py  _dataset.py  helper.py
gaitmap_datasets/egait_parameter_validation_2013/: __init__.py  _dataset.py  helper.py
gaitmap_datasets/egait_segmentation_validation_2014/: __init__.py  _dataset.py  helper.py
gaitmap_datasets/kluge_2017/: __init__.py  _dataset.py  helper.py
gaitmap_datasets/pyshoe_2019/: __init__.py  _dataset.py  helper.py
gaitmap_datasets/sensor_position_comparison_2019/: __init__.py  _dataset.py  helper.py
gaitmap_datasets/stair_ambulation_healthy_2021/: _dataset.py  helper.py  pressure_sensor_helper.py
gaitmap_datasets/stair_ambulation_healthy_2021/scripts/: __init__.py  create_pressure_events.py
gaitmap_datasets/utils/: __init__.py  array_handling.py  c3d_loading.py  consts.py  coordinate_transforms.py  data_loading.py  egait_loading_helper.py  event_detection.py
guides/: index.html
logos/: README.html
mad_datasets/: __init__.py
mad_datasets/egait_parameter_validation_2013/: _dataset.py  helper.py
mad_datasets/egait_segmentation_validation_2013/: __init__.py  _dataset.py  helper.py
mad_datasets/egait_segmentation_validation_2014/: __init__.py  _dataset.py  helper.py
mad_datasets/egait_validation_2013/: __init__.py  _dataset.py  egait_loading_helper.py  helper.py
mad_datasets/sensor_position_comparison_2019/: __init__.py  _dataset.py  helper.py
mad_datasets/stair_ambulation_healthy_2021/: __init__.py  _dataset.py  helper.py  pressure_sensor_helper.py
mad_datasets/stair_ambulation_healthy_2021/scripts/: create_pressure_events.py
mad_datasets/utils/: __init__.py  consts.py  coordinate_transforms.py  data_loading.py  egait_loading_helper.py  event_detection.py
modules/: index.html
tests/: _regression_utils.py  conftest.py  test_config.py  test_egait_adidas_2014.py  test_egait_loading.py  test_egait_segmentation_validation_2013.py  test_egait_segmentation_validation_2014.py  test_egait_validation_2013.py  test_kluge_2017.py  test_sensor_position_comparison_2019.py  test_stair_ambulation_healthy_2021.py
tests/egait_validation_2013_test_data/: A6DF.csv  A917.csv  P115_E4_left.csv  P115_E4_left_calibrated.csv  P115_E4_right.csv  P115_E4_right_calibrated.csv
tests/snapshot/: test_get_data_example_imu_summary.json  test_get_mocap_data_example_mocap_summary.json  test_load_data[False]_left_sensor.json  test_load_data[False]_left_sensor_summary.json  test_load_data[False]_right_sensor.json  test_load_data[False]_right_sensor_summary.json  test_load_data[True]_hip_sensor.json  test_load_data[True]_hip_sensor_summary.json  test_load_data[True]_left_sensor.json  test_load_data[True]_left_sensor_summary.json  test_load_data[True]_right_sensor.json  test_load_data[True]_right_sensor_summary.json
