[tool.poetry]
name = "mad-datasets"
version = "0.3.0"
description = "Helper to access to open-source gait datasets used by MaD-Lab"
authors = [
    "Arne Küderle <arne.kuederle@fau.de>",
    "Nils Roth <nils.roth@fau.de>",
    "Liv Herzer <liv.herzer@gmx.de>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mad-lab-fau/mad-datasets"
repository = "https://github.com/mad-lab-fau/mad-datasets"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
tpcp = ">=0.11"
pandas = ">=1.4.2"
joblib = ">=1.2.0"
imucal = ">=2.3.0"
nilspodlib = ">=3.6.0"
scipy = ">=1.8.1"
c3d = "^0.5.1"

[tool.poetry.dev-dependencies]
poethepoet = "^0.14.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
ipykernel = "^6.15.0"
numpydoc = "^1.4.0"
Sphinx = "^4.2.0"
sphinx-gallery = "^0.10.1"
recommonmark = "^0.7.1"
memory-profiler = "^0.60.0"
matplotlib = "^3.5.2"
toml = "^0.10.2"
pydata-sphinx-theme = "^0.9.0"
prospector = "^1.8.3"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true


[tool.poe.tasks]
_format_black = "black ."
_format_isort = "isort ."
format = { sequence = ["_format_black", "_format_isort"], help = "Format all files." }
lint = { cmd = "prospector", help = "Lint all files with Prospector." }
_check_black = "black . --check"
_check_isort = "isort . --check"
check = { sequence = ["_check_black", "_check_isort", "lint"], help = "Check all potential format and linting issues." }
test = { cmd = "pytest --cov=mad_datasets --cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
version = { script = "_tasks:task_update_version()" }
docs = { script = "_tasks:task_docs()" }
upload_docs = { script = "_tasks:task_upload_docs()" }
prepare_release = { script = "_tasks:task_prepare_release()" }

